--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "element-plus": "^2.7.1"
+    "element-plus": "^2.7.1",
+    "sass": "^1.75.0"
   }
 }
